The e-calendar-factory process did not terminate automatically when the user logged out of the graphical desktop environment, and e-calendar-factory thus redundantly consumed system resources. (https://bugzilla.redhat.com/show_bug.cgi?id=1141760 and upstream https://bugzilla.gnome.org/show_bug.cgi?id=646117)

bump PKGREVISION